just started on the analysis piece going to see if enough info in title or need to do more

--- a/Bryan_Combs/Aquire_Redit_Data.ipynb
+++ b/Bryan_Combs/Aquire_Redit_Data.ipynb
@@ -647,7 +647,9 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -703,12 +705,25 @@
     "        print('res error ',  res.status_code)\n",
     "        break\n",
     "    else:\n",
-    "        print(len(posts))\n",
+    "        print(len(posts), after)\n",
     "    redit_posts = [post['data'] for post in current_dict['data']['children']]\n",
     "    posts.extend(redit_posts)\n",
     "    after = current_dict['data']['after']\n",
     "    time.sleep(4)\n",
-    "    pd.DataFrame(posts).to_csv('./data/democratic.csv', index = False)"
+    "    pd.DataFrame(posts).to_csv('./data/democratic.csv', index = False)\n",
+    "    #new_posts = pd.DataFrame(posts)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dem_posts = pd.read_csv('./data/democratic.csv')\n",
+    "\n",
+    "#dem_posts = "
    ]
   },
   {
