--- a/Bryan_Combs/Aquire_Redit_Data.ipynb
+++ b/Bryan_Combs/Aquire_Redit_Data.ipynb
@@ -11,12 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data from redit/democrats"
+    "### Data from redit/democrats\n",
+    "\n",
+    "In the following sections, the structure of the data is explored in order to allow the construction of a for loop to read in the data and output in a csv format."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,23 +632,59 @@
    "source": [
     "### Set a loop to get a larger quantity of post\n",
     "\n",
-    "The program can now get and understand a data request.  However more than 26 cases are needed for the analysis so a loop needs to be created to hit the API and get more posts."
+    "The program can now get and understand a data request.  However more than 25 cases are needed for the analysis so created a loop to get more data.  Ran the loop multiple times to get more than the 1000 cases allowed normally.  Selected on after variable to make sure and get unique cases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running the Cells below should collect the data and save it to a csv file.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
-    "posts = []  #above code was to figure out structure\n",
+    "import requests   #importing required Dictionaries\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "posts = [] #above code was to figure out structure  this loop should do it all\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests \n",
     "after = None\n",
+    "url = 'https://www.reddit.com/r/democrats/.json'\n",
     "#code below is the loop to get the data and save it to the dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
    "metadata": {
     "scrolled": false
    },
@@ -655,41 +693,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "26\n",
-      "51\n",
-      "76\n",
-      "101\n",
-      "126\n",
-      "151\n",
-      "176\n",
-      "201\n",
-      "226\n",
-      "251\n",
-      "276\n",
-      "301\n",
-      "326\n",
-      "351\n",
-      "376\n",
-      "401\n",
-      "426\n",
-      "451\n",
-      "476\n",
-      "501\n",
-      "526\n",
-      "551\n",
-      "576\n",
-      "601\n",
-      "626\n",
-      "651\n",
-      "676\n",
-      "701\n",
-      "726\n",
-      "751\n",
-      "776\n",
-      "801\n",
-      "826\n",
-      "851\n"
+      "0 None\n",
+      "26 t3_9dollh\n",
+      "51 t3_9djch3\n",
+      "76 t3_9dcqw7\n",
+      "101 t3_9d166j\n",
+      "126 t3_9d24io\n",
+      "151 t3_9cxdic\n",
+      "176 t3_9cv8s6\n",
+      "201 t3_9cquei\n",
+      "226 t3_9cclz5\n",
+      "251 t3_9c8009\n",
+      "276 t3_9c9483\n",
+      "301 t3_9c1cfa\n",
+      "326 t3_9bypjm\n",
+      "351 t3_9bt508\n",
+      "376 t3_9be585\n",
+      "401 t3_9bhfvm\n",
+      "426 t3_9b6a6i\n",
+      "451 t3_9aq5rv\n",
+      "476 t3_9auh6x\n",
+      "501 t3_9ald3a\n",
+      "526 t3_9acw2u\n",
+      "551 t3_9a6lhe\n",
+      "576 t3_9a7835\n",
+      "601 t3_99y4kc\n",
+      "626 t3_99unb9\n",
+      "651 t3_99o3km\n",
+      "676 t3_99l25r\n",
+      "701 t3_99aodd\n",
+      "726 t3_998lf4\n",
+      "751 t3_98yjm0\n",
+      "776 t3_98n33j\n",
+      "801 t3_98qgud\n",
+      "826 t3_98nepr\n",
+      "851 t3_98lvjh\n"
      ]
     }
    ],
@@ -706,44 +744,37 @@
     "        break\n",
     "    else:\n",
     "        print(len(posts), after)\n",
+    "   \n",
+    "   \n",
     "    redit_posts = [post['data'] for post in current_dict['data']['children']]\n",
     "    posts.extend(redit_posts)\n",
+    "    \n",
     "    after = current_dict['data']['after']\n",
+    "    \n",
     "    time.sleep(4)\n",
     "    pd.DataFrame(posts).to_csv('./data/democratic.csv', index = False)\n",
-    "    #new_posts = pd.DataFrame(posts)\n",
+    "   \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#dem_posts = pd.read_csv('./data/democratic.csv')\n",
-    "\n",
-    "#dem_posts = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "876"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "876\n"
+     ]
     }
    ],
    "source": [
-    "len(posts) #910 posts in csv from redits democrats"
+    "print(len(posts))\n",
+    " \n",
+    "\n",
+    "   "
    ]
   },
   {
@@ -757,7 +788,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "posts_r = []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
    "metadata": {
     "focus": false,
     "id": "783fd153-28ac-47ab-bfca-27e7c1de95b4"
@@ -765,13 +805,13 @@
    "outputs": [],
    "source": [
     "url = 'https://www.reddit.com/r/Conservative/.json'\n",
-    "posts = []\n",
-    "after = None"
+    "\n",
+    "after_r = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 201,
    "metadata": {
     "scrolled": true
    },
@@ -781,70 +821,69 @@
      "output_type": "stream",
      "text": [
       "0 None\n",
-      "27 t3_9cz9m0\n",
-      "52 t3_9cy2v7\n",
-      "77 t3_9cyasv\n",
-      "102 t3_9cx3mv\n",
-      "127 t3_9cx0py\n",
-      "152 t3_9clbb8\n",
-      "177 t3_9cptqu\n",
-      "202 t3_9ch72j\n",
-      "227 t3_9cnzie\n",
-      "252 t3_9cdybs\n",
-      "277 t3_9c7hxb\n",
-      "302 t3_9c25f6\n",
-      "327 t3_9c6853\n",
-      "352 t3_9c31n8\n",
-      "377 t3_9bsfon\n",
-      "402 t3_9bsf2u\n",
-      "427 t3_9bxhnz\n",
-      "452 t3_9bp795\n",
-      "477 t3_9bwd0b\n",
-      "502 t3_9bj2ox\n",
-      "527 t3_9blyn0\n",
-      "552 t3_9bf0w4\n",
-      "577 t3_9bfwgg\n",
-      "602 t3_9bnlrp\n",
-      "627 t3_9bk6lm\n",
-      "652 t3_9bb2b5\n",
-      "677 t3_9bden4\n",
-      "702 t3_9bcnkf\n",
-      "727 t3_9bcmqw\n",
-      "752 t3_9ayp63\n",
-      "777 t3_9ay0zn\n",
-      "802 t3_9azk35\n",
-      "827 t3_9b0nn7\n",
-      "834 None\n"
+      "27 t3_9djca7\n",
+      "52 t3_9dlw1k\n",
+      "77 t3_9dnjbl\n",
+      "102 t3_9d8a5n\n",
+      "127 t3_9de5ov\n",
+      "152 t3_9d8mx8\n",
+      "177 t3_9d9fft\n",
+      "202 t3_9d95w1\n",
+      "227 t3_9cwoq1\n",
+      "252 t3_9cyvm5\n",
+      "277 t3_9d8ajw\n",
+      "302 t3_9d2a3g\n",
+      "327 t3_9csodo\n",
+      "352 t3_9d0ap6\n",
+      "377 t3_9cppz4\n",
+      "402 t3_9coleh\n",
+      "427 t3_9cm7b4\n",
+      "452 t3_9cldr3\n",
+      "477 t3_9cd8ru\n",
+      "502 t3_9cdhn8\n",
+      "527 t3_9c7kyx\n",
+      "552 t3_9c4c0m\n",
+      "577 t3_9c4mwr\n",
+      "602 t3_9bx9z6\n",
+      "627 t3_9bz6k0\n",
+      "652 t3_9bwm68\n",
+      "677 t3_9byq4q\n",
+      "702 t3_9bpc9j\n",
+      "727 t3_9bjkvq\n",
+      "752 t3_9bl8xa\n",
+      "777 t3_9bmb7z\n"
      ]
     }
    ],
    "source": [
     "#set up the same for loop for conservative posts from this subredit\n",
-    "for _ in range(35):  # for loop to his reddit mulitiple times.  \n",
-    "    if after == None:\n",
+    "for _ in range(32):  # for loop to his reddit mulitiple times.  \n",
+    "    if after_r == None:\n",
     "        current_url = url\n",
     "    else: \n",
-    "        current_url = url + '?after=' + after \n",
-    "        \n",
+    "        current_url = url + '?after=' + after_r \n",
+    "    #find new url   \n",
     "    res = requests.get(current_url, headers = {'User-agent': 'Snake_2'}) \n",
     "    current_dict = res.json()\n",
-    "    \n",
+    "    #break if a problem\n",
     "    if res.status_code != 200:\n",
     "        print('res error ',  res.status_code)\n",
     "        break\n",
     "    else:\n",
-    "        print(len(posts), after)\n",
+    "        print(len(posts_r), after_r)\n",
+    " \n",
+    "    #add new posts to list  \n",
+    "    redit_posts = [reddit['data'] for reddit in current_dict['data']['children']]\n",
+    "    posts_r.extend(redit_posts)\n",
     "        \n",
-    "    redit_posts = [post['data'] for post in current_dict['data']['children']]\n",
-    "    posts.extend(redit_posts)\n",
-    "    after = current_dict['data']['after']\n",
-    "    time.sleep(4)\n",
-    "    pd.DataFrame(posts).to_csv('./data/republican.csv', index = False)\n"
+    "    after_r = current_dict['data']['after']\n",
+    "    time.sleep(4) #time between scrapes\n",
+    "    pd.DataFrame(posts_r).to_csv('./data/republican.csv', index = False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 202,
    "metadata": {
     "scrolled": false
    },
@@ -852,23 +891,23 @@
     {
      "data": {
       "text/plain": [
-       "861"
+       "799"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(posts)"
+    "len(posts_r)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Have 861 conservative posts saved to republican.csv.  r/Conservative provided one extra post per scrape than r/democrat but seemed to cut off earlier. There are 876 r/democrat posts. "
+    "Have 801 conservative posts saved to republican.csv.  r/Conservative circled back to the start earlier  than r/democrat but seemed to cut off earlier. There are 876 r/democrat posts. "
    ]
   },
   {
@@ -880,16 +919,6 @@
    "outputs": [],
    "source": [
     "## YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "focus": false,
-    "id": "04563b69-f7b6-466f-9d65-fc62c9ddee6a"
-   },
-   "source": [
-    "## Predicting subreddit using Random Forests + Another Classifier"
    ]
   },
   {
@@ -904,132 +933,6 @@
    "source": [
     "## YOUR CODE HERE"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "focus": false,
-    "id": "c7631f51-07f2-4c79-a093-3e9bc7849a48"
-   },
-   "source": [
-    "#### We want to predict a binary variable - class `0` for one of your subreddits and `1` for the other."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "focus": false,
-    "id": "c20d2498-151c-44c3-a453-3a333c79a0ac"
-   },
-   "outputs": [],
-   "source": [
-    "## YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "focus": false,
-    "id": "a7afb2c0-d41e-4779-8216-91cd8dd4473f"
-   },
-   "source": [
-    "#### Thought experiment: What is the baseline accuracy for this model?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "focus": false,
-    "id": "87a17d3d-b7f4-4747-9f75-f9af1d18a174"
-   },
-   "outputs": [],
-   "source": [
-    "## YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "focus": false,
-    "id": "4fb29de2-5b98-474c-a4ad-5170b72b9aea"
-   },
-   "source": [
-    "#### Create a `RandomForestClassifier` model to predict which subreddit a given post belongs to."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "focus": false,
-    "id": "ddbc6159-6854-4ca7-857f-bfecdaf6d9c2"
-   },
-   "outputs": [],
-   "source": [
-    "## YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "focus": false,
-    "id": "9367beff-72ba-4768-a0ba-a50b335de61d"
-   },
-   "source": [
-    "#### Use cross-validation in scikit-learn to evaluate the model above. \n",
-    "- Evaluate the accuracy of the model, as well as any other metrics you feel are appropriate. \n",
-    "- **Bonus**: Use `GridSearchCV` with `Pipeline` to optimize your `CountVectorizer`/`TfidfVectorizer` and classification model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "focus": false,
-    "id": "269b9e7c-60b5-4a06-8255-881d7395bc1b"
-   },
-   "outputs": [],
-   "source": [
-    "## YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Repeat the model-building process using a different classifier (e.g. `MultinomialNB`, `LogisticRegression`, etc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "## YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Executive Summary\n",
-    "---\n",
-    "Put your executive summary in a Markdown cell below."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
