tried star trek and starwars data and it did better

--- a/Bryan_Combs/Aquire_Redit_Data.ipynb
+++ b/Bryan_Combs/Aquire_Redit_Data.ipynb
@@ -632,7 +632,7 @@
    "source": [
     "### Set a loop to get a larger quantity of post\n",
     "\n",
-    "The program can now get and understand a data request.  However more than 25 cases are needed for the analysis so created a loop to get more data.  Ran the loop multiple times to get more than the 1000 cases allowed normally.  Selected on after variable to make sure and get unique cases."
+    "The program can now get and understand a data request.  However more than 25 cases are needed for the analysis so created a loop to get more data.  Each iterator for loop needs to be manually set to avoid it looping back and repeatedly scraping data"
    ]
   },
   {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,13 +665,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests \n",
     "after = None\n",
-    "url = 'https://www.reddit.com/r/democrats/.json'\n",
+    "#url = 'https://www.reddit.com/r/democrats/.json'\n",
+    "url = 'https://www.reddit.com/r/StarWars/.json'\n",
     "#code below is the loop to get the data and save it to the dataframe"
    ]
   },
@@ -684,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -694,45 +695,37 @@
      "output_type": "stream",
      "text": [
       "0 None\n",
-      "26 t3_9dollh\n",
-      "51 t3_9djch3\n",
-      "76 t3_9dcqw7\n",
-      "101 t3_9d166j\n",
-      "126 t3_9d24io\n",
-      "151 t3_9cxdic\n",
-      "176 t3_9cv8s6\n",
-      "201 t3_9cquei\n",
-      "226 t3_9cclz5\n",
-      "251 t3_9c8009\n",
-      "276 t3_9c9483\n",
-      "301 t3_9c1cfa\n",
-      "326 t3_9bypjm\n",
-      "351 t3_9bt508\n",
-      "376 t3_9be585\n",
-      "401 t3_9bhfvm\n",
-      "426 t3_9b6a6i\n",
-      "451 t3_9aq5rv\n",
-      "476 t3_9auh6x\n",
-      "501 t3_9ald3a\n",
-      "526 t3_9acw2u\n",
-      "551 t3_9a6lhe\n",
-      "576 t3_9a7835\n",
-      "601 t3_99y4kc\n",
-      "626 t3_99unb9\n",
-      "651 t3_99o3km\n",
-      "676 t3_99l25r\n",
-      "701 t3_99aodd\n",
-      "726 t3_998lf4\n",
-      "751 t3_98yjm0\n",
-      "776 t3_98n33j\n",
-      "801 t3_98qgud\n",
-      "826 t3_98nepr\n",
-      "851 t3_98lvjh\n"
+      "26 t3_9dvtri\n",
+      "51 t3_9do5nj\n",
+      "76 t3_9do5ls\n",
+      "101 t3_9diwkq\n",
+      "126 t3_9d7qa6\n",
+      "151 t3_9de4p1\n",
+      "176 t3_9d14if\n",
+      "201 t3_9d55oq\n",
+      "226 t3_9csc3j\n",
+      "251 t3_9cngl6\n",
+      "276 t3_9cjorr\n",
+      "301 t3_9cljce\n",
+      "326 t3_9c9mbo\n",
+      "351 t3_9ceq28\n",
+      "376 t3_9bz546\n",
+      "401 t3_9byr5m\n",
+      "426 t3_9bv6ex\n",
+      "451 t3_9bo5ux\n",
+      "476 t3_9bmxn7\n",
+      "501 t3_9bjiia\n",
+      "526 t3_9bhrbv\n",
+      "551 t3_9b8snf\n",
+      "576 t3_9b6bt7\n",
+      "601 t3_9bay58\n",
+      "626 t3_9b26tw\n",
+      "651 t3_9b1cnl\n"
      ]
     }
    ],
    "source": [
-    "for _ in range(35):  # for loop to his reddit mulitiple times.  \n",
+    "for _ in range(27):  # for loop to his reddit mulitiple times.  \n",
     "    if after == None:\n",
     "        current_url = url\n",
     "    else: \n",
@@ -752,21 +745,21 @@
     "    after = current_dict['data']['after']\n",
     "    \n",
     "    time.sleep(4)\n",
-    "    pd.DataFrame(posts).to_csv('./data/democratic.csv', index = False)\n",
-    "   \n",
+    "    pd.DataFrame(posts).to_csv('./data/starwars.csv', index = False)\n",
+    "   # pd.DataFrame(posts).to_csv('./data/democratic.csv', index = False)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "876\n"
+      "676\n"
      ]
     }
    ],
@@ -788,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,21 +790,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 10,
    "metadata": {
     "focus": false,
     "id": "783fd153-28ac-47ab-bfca-27e7c1de95b4"
    },
    "outputs": [],
    "source": [
-    "url = 'https://www.reddit.com/r/Conservative/.json'\n",
-    "\n",
+    "url = 'https://www.reddit.com/r/startrek/.json'\n",
+    "#url = 'https://www.reddit.com/r/Conservative/.json'\n",
     "after_r = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -821,43 +814,38 @@
      "output_type": "stream",
      "text": [
       "0 None\n",
-      "27 t3_9djca7\n",
-      "52 t3_9dlw1k\n",
-      "77 t3_9dnjbl\n",
-      "102 t3_9d8a5n\n",
-      "127 t3_9de5ov\n",
-      "152 t3_9d8mx8\n",
-      "177 t3_9d9fft\n",
-      "202 t3_9d95w1\n",
-      "227 t3_9cwoq1\n",
-      "252 t3_9cyvm5\n",
-      "277 t3_9d8ajw\n",
-      "302 t3_9d2a3g\n",
-      "327 t3_9csodo\n",
-      "352 t3_9d0ap6\n",
-      "377 t3_9cppz4\n",
-      "402 t3_9coleh\n",
-      "427 t3_9cm7b4\n",
-      "452 t3_9cldr3\n",
-      "477 t3_9cd8ru\n",
-      "502 t3_9cdhn8\n",
-      "527 t3_9c7kyx\n",
-      "552 t3_9c4c0m\n",
-      "577 t3_9c4mwr\n",
-      "602 t3_9bx9z6\n",
-      "627 t3_9bz6k0\n",
-      "652 t3_9bwm68\n",
-      "677 t3_9byq4q\n",
-      "702 t3_9bpc9j\n",
-      "727 t3_9bjkvq\n",
-      "752 t3_9bl8xa\n",
-      "777 t3_9bmb7z\n"
+      "26 t3_9diu7j\n",
+      "51 t3_9d7gif\n",
+      "76 t3_9d2h0l\n",
+      "101 t3_9crs9z\n",
+      "126 t3_9ciab0\n",
+      "151 t3_9cbtd3\n",
+      "176 t3_9c8sg9\n",
+      "201 t3_9c2s6d\n",
+      "226 t3_9bzcj8\n",
+      "251 t3_9bnjkf\n",
+      "276 t3_9b048b\n",
+      "301 t3_9ayh8a\n",
+      "326 t3_9b4t93\n",
+      "351 t3_9akpap\n",
+      "376 t3_9ag81m\n",
+      "401 t3_9a5ste\n",
+      "426 t3_9a7oyw\n",
+      "451 t3_99ioq3\n",
+      "476 t3_99ldct\n",
+      "501 t3_994arr\n",
+      "526 t3_99bh9g\n",
+      "551 t3_98sq5f\n",
+      "576 t3_98qvk5\n",
+      "601 t3_98j53v\n",
+      "626 t3_98fnut\n",
+      "651 t3_988b88\n"
      ]
     }
    ],
    "source": [
     "#set up the same for loop for conservative posts from this subredit\n",
-    "for _ in range(32):  # for loop to his reddit mulitiple times.  \n",
+    "for _ in range(27):  # for loop to his reddit mulitiple times.  \n",
     "    if after_r == None:\n",
     "        current_url = url\n",
     "    else: \n",
@@ -878,12 +866,14 @@
     "        \n",
     "    after_r = current_dict['data']['after']\n",
     "    time.sleep(4) #time between scrapes\n",
-    "    pd.DataFrame(posts_r).to_csv('./data/republican.csv', index = False)\n"
+    "    pd.DataFrame(posts_r).to_csv('./data/startrek.csv', index = False)\n",
+    "    #ran on three different reddits by changing the commented out lines\n",
+    "    #pd.DataFrame(posts_r).to_csv('./data/republican.csv', index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -891,47 +881,16 @@
     {
      "data": {
       "text/plain": [
-       "799"
+       "676"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(posts_r)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Have 801 conservative posts saved to republican.csv.  r/Conservative circled back to the start earlier  than r/democrat but seemed to cut off earlier. There are 876 r/democrat posts. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "## YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "focus": false,
-    "id": "588f9845-6143-4bcc-bfd1-85d45b79303d"
-   },
-   "outputs": [],
-   "source": [
-    "## YOUR CODE HERE"
    ]
   }
  ],
