--- a/Bryan_Combs/Merge_Redit_Files_and_prepare_for_analysis.ipynb
+++ b/Bryan_Combs/Merge_Redit_Files_and_prepare_for_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dems = pd.read_csv('./data/democratic.csv')\n",
-    "reps = pd.read_csv('./data/republican.csv')\n"
+    "#dems = pd.read_csv('./data/democratic.csv')\n",
+    "#reps = pd.read_csv('./data/republican.csv')\n",
+    "swar = pd.read_csv('./data/starwars.csv')\n",
+    "strek = pd.read_csv('./data/startrek.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -133,7 +135,7 @@
        "[1 rows x 97 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +155,7 @@
        "(876, 97)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -175,7 +177,7 @@
        "876"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,8 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -195,7 +199,7 @@
        "873"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,8 +209,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get rid of any duplicates that might have gotten into the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dems.drop_duplicates(inplace = True)\n",
+    "reps.drop_duplicates(inplace = True)\n",
+    "swar.drop_duplicates(inplace = True)\n",
+    "strek.drop_duplicates(inplace = True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -377,7 +400,7 @@
        "[3 rows x 96 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
@@ -396,10 +419,10 @@
     {
      "data": {
       "text/plain": [
-       "(799, 96)"
+       "(799, 97)"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +442,7 @@
        "788"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,10 +452,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both data sets have 97 variables.  r/democrat has 876 entries and the r/Conservative has 861 entries.  "
+    "Both Political data have 96 variables.  r/democrat has 876 entries and the r/Conservative has 799 entries.  We have 11 duplicate titles for republicans and 3 for democrats.  Not sure if these are duplicate posts or different people posted same titles yet  "
    ]
   },
   {
@@ -444,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +488,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +500,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strek['target'] = 0\n",
+    "swar['target'] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +524,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +555,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames_1 = [strek, swar]\n",
+    "comb_space = pd.concat(frames_1, axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +574,7 @@
        "(1675, 98)"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -776,35 +826,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1675, 81)"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "comb.shape\n"
+    "Only real text seems to be in the title and self text features.  The features will be combined to create one vector of text data for the count vectorization process"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comb['selftext'].fillna(\"\", inplace = True)\n",
+    "    \n",
+    "comb['text']  = comb['title'] + comb['selftext']\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comb_space['selftext'].fillna(\"\", inplace = True)\n",
+    "comb_space['text'] = comb_space['title'] + comb_space['selftext']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +865,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 1675 entries, 0 to 798\n",
-      "Data columns (total 81 columns):\n",
+      "Data columns (total 82 columns):\n",
       "archived                    1675 non-null bool\n",
       "author                      1675 non-null object\n",
       "author_cakeday              1 non-null object\n",
@@ -873,7 +925,7 @@
       "score                       1675 non-null int64\n",
       "secure_media                26 non-null object\n",
       "secure_media_embed          1675 non-null object\n",
-      "selftext                    80 non-null object\n",
+      "selftext                    1675 non-null object\n",
       "selftext_html               80 non-null object\n",
       "send_replies                1675 non-null bool\n",
       "spoiler                     1675 non-null bool\n",
@@ -895,8 +947,9 @@
       "visited                     1675 non-null bool\n",
       "whitelist_status            1675 non-null object\n",
       "wls                         1675 non-null int64\n",
-      "dtypes: bool(24), float64(4), int64(10), object(43)\n",
-      "memory usage: 798.2+ KB\n"
+      "text                        1675 non-null object\n",
+      "dtypes: bool(24), float64(4), int64(10), object(44)\n",
+      "memory usage: 851.3+ KB\n"
      ]
     }
    ],
@@ -914,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -924,16 +977,16 @@
        "1    Nation Stunned That There Is Someone in White ...\n",
        "2             Alex Jones Permanently Banned By Twitter\n",
        "3    It's About Time Senate Democrats Showed Some D...\n",
-       "Name: title, dtype: object"
+       "Name: text, dtype: object"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "comb.title.head(4)"
+    "comb.text.head(4)"
    ]
   },
   {
@@ -945,21 +998,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ['title', 'target']\n",
+    "features = ['text', 'target']\n",
     "test_data = comb[features]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_1 = ['text', 'target']\n",
+    "space_data = comb_space[features_1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_data.to_csv('./data/combined_data.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "space_data.to_csv('./data/space_data.csv', index = False)"
    ]
   },
   {
